--- a/frontend/src/pages/VideoPage/videoPage.css
+++ b/frontend/src/pages/VideoPage/videoPage.css
@@ -1,14 +1,15 @@
 .Page_Container {
-    height: 100vh;
+    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    padding: 50px 0 50px 0;
 }
 
 .Video_Feed{
-    height: 90%;
-    width: 90%;
+    height: 480px;
+    width: 640px;
     background-color: black;
 }
